--- a/doc/latex2/references.bib
+++ b/doc/latex2/references.bib
@@ -161,3 +161,10 @@
 	year = "2012"
 }
 
+@mastersthesis{hafreager2014flow,
+	author = "Hafreager, Anders",
+	school = "University of Oslo",
+	title = "{Flow of dilute gasses in complex nanoporous media}",
+	year = "2014"
+}
+
