--- a/doc/latex2/discussion.tex
+++ b/doc/latex2/discussion.tex
@@ -18,7 +18,7 @@ In summary, this project contains
 
 \subsection{Application}
 
-The model gives fairly good results for the application on PKC$\gamma$ into spines which largely are in agreement with the results by Craske et.al. 
+The model gives fairly good results for the application on PKC$\gamma$ into spines which largely are in agreement with the results by Craske et.al \cite{craske2005spines}. 
 However, the mean diffusion times found from simulations seem to consistently lie towards the lower limits of the experimental results. 
 One possible extension to the model which might fix this is to introduce an absorption probability in the spine head which is fairly large (say 80\% per second), or even increases with the amount of time spent in the spine head. 
 A setup like this should increase the average diffusion time by a few seconds. 
@@ -32,8 +32,10 @@ This means that there are quite a few possible extensions that can be done to th
 The idea, however, was always to create a software in which the lower scale model can easily be substituted for a better one. 
 By letting the lower scale model work as a standalone unit which communicates with the rest of the software through a file containing the positions of all the walkers (or particles), this is ensured. 
 All that is needed to switch lower scale model is to put the new solver in the correct place with respect to the rest of the software, and make sure it can communicate in the described manner. 
-As a test, the DSMC code developed by Anders Hafreager was used as a lower scale model for one simulation. 
+As a test, the DSMC code developed by Anders Hafreager \cite{hafreager2014flow} was used as a lower scale model for one simulation. 
 Naturally, a few problems arose, but from a strictly programming point of view it worked. \\
+
+\noindent Another, rather simple extension would be to find an application which requires modeling anisotropic diffusion. This has already been implemented in the PDE and RW solvers. The anisotropic RW implementation is based on the article by Farnell and Gibson \cite{farnell2005monte}. \\
 
 \noindent As mentioned in section \ref{theory:BC_RW}, perfect flux exchange between the higher and lower scale model might have been a better boundary condition for the RW model than zero flux boundary conditions. 
 In principle, changing boundary conditions on the RW solver is simple, seeing as it is completely separate from the rest of the software. 
@@ -44,17 +46,17 @@ Implementing a mesh geometry which is not square in a finite difference method t
 Ultimately, one must solve an entirely different equation. 
 Alternatively, a finite element method can be used. 
 Finite element software will already have support for new mesh geometries built in, making the suggested transformations unnecessary. 
-Implementing a finite element PDE solver will also make it a lot easier to use a higher order approximation to the time derivative, hence getting a more accurate PDE solution. 
+% Implementing a finite element PDE solver will also make it a lot easier to use a higher order approximation to the time derivative, hence getting a more accurate PDE solution. 
 
 There are, of course, a lot of physical problems which the developed software can be applied to. 
-One possibility is modeling sodium ions that diffuse through ion channels in the cell membrane of neurons into the extracellular space of the brain. 
+One possibility is modeling sodium ions that diffuse through ion channels in the cell membrane of neurons into the extracellular space of the brain. \\
 Ion channels are very narrow, often only allowing one ion through at a time, and they are (often) specific to one ion. 
 Two 1D PDEs can describe the intra-, and extra-cellular concentrations of ions, and a lower scale model can describe the ion channel. 
 This problem would also need to consider drift terms arising from Coulomb forces and using a modified particle model which can describe the dynamics inside an ion channel. \\
 
 In principle, any diffusion process where a small portion of a large number of particles diffuse into narrow passages could be modeled by the developed hybrid diffusion solver.
 
-\subsection{Other work on the subject}
+\subsection{Other work on the topic}
 
 As the project was being finished, I came across an article by Flekkøy et.al.\cite{flekkoy2001coupling} describing the same problems that are addressed in this thesis. 
 In this article, the authors try to combine a simple diffusion solver with a simple random walk solver and end up concluding that this is possible. 
