--- a/doc/latex2/application.tex
+++ b/doc/latex2/application.tex
@@ -1,10 +1,13 @@
 The following chapter is included to show that the developed hybrid diffusion solver can be applied to real life problems with only minor modifications.
 
 \section{Physical scope}
+``To understand the central nervous system of even the simplest animals requires an understanding of the nervous system at many different levels, over a wide range of both spatial and temporal scales'' - David Sterratt \cite{graham2011principles}.\\
 
+\noindent There are potentially many applications of a hybrid diffusion solver within the field of neuroscience, which is the study of the central nervous system. 
+This chapter will look at a small part of a neuron located in the brain of a rat.
 \begin{figure}[H]
  \centering
- \includegraphics[width=0.7\textwidth]{Figures/Cochlear_nucleus_multipolar_cell.jpg}
+ \includegraphics[width=0.6\textwidth]{Figures/Cochlear_nucleus_multipolar_cell.jpg}
  \caption[Pyramidal neuron]{A pyramidal neuron with an apical dendrite (starting by the arrow). The inset shows an amplification of the apical dendrite and illustrates the size of dendritic spines (small outgrowths). The arrow points to the cell body, called the Soma. Note that this image does not show how neurons are located within the brain. Image from \url{www.neurolex.org}.}
  \label{application:pyramidal_neuron}
 \end{figure}
