--- a/doc/latex2/references.bib
+++ b/doc/latex2/references.bib
@@ -28,7 +28,10 @@
 }
 
 @book{graham2011principles,
-	author = "Graham, Bruce and Gillies, Andrew and Willshaw, David"
+	author = "Graham, Bruce and Gillies, Andrew and Willshaw, David",
+	publisher = "Cambridge",
+	title = "{Principles of computational modelling in neuroscience}",
+	year = "2011"
 }
 
 @article{craske2005spines,
