--- a/doc/latex2/introduction.tex
+++ b/doc/latex2/introduction.tex
@@ -1,4 +1,4 @@
-Diffusion processes are extremely important in modern science, and have so many applications that it is challenging to list them all. 
+\noindent Diffusion processes are extremely important in modern science, and have so many applications that it is challenging to list them all. 
 Brownian motion of particles, momentum in liquids, and atomic diffusion are just some examples of processes described by the diffusion equation. \\
 \noindent Both in general transport processes, and particularly in diffusion processes, there are cases in which parts of the process cannot be described by a continuum model, but the rest of the process can. 
 Examples of such processes are fluid flow in nanoporous media and diffusion in the extracellular space of the brain. There are also many examples in materials design.
@@ -8,16 +8,16 @@ There are three obvious ways to handle multi scale problems.
 The first alternative is to ignore the problem, and assume that the chosen model can accurately solve the problem. For diffusion processes, this approach often works a lot better than it should. 
 A more realistic approach is to create an intermediate scale and model. In the limit between continuum and particle dynamics this is often called a \emph{meso scale} model. 
 An example of a meso scale model is dissipative particle dynamics \cite{warren1998dissipative}, where clusters of particles are modeled as individual particles. The particle clusters have different properties than the individual atoms or molecules which make up the substance. 
-A final alternative is a \emph{hybrid} model.
+A final alternative is a \emph{hybrid} model that uses more than one model of the problem in order to describe it.
 Some hybrid models exist today, but these are mostly aimed at specific problems, like dendritc solidification \cite{plapp2000multiscale}, or hybrid fluid flow models which combine molecular dynamics and Navier-Stokes solvers \cite{o1995molecular}. 
 Other hybrid solvers for diffusion processes have also been developed \cite{flekkoy2001coupling}, but they are closed in the sense that the computer code is not commonly available. \\
 
-\noindent The aim of this masters thesis is to develop a simple, yet flexible hybrid diffusion solver from the ground and up where all parts of the theory and implementation are fully understood and transparent. 
+\noindent The aim of this masters thesis is to develop and implement a simple, yet flexible hybrid diffusion solver from the ground and up where all parts of the theory and implementation are fully understood and transparent. 
 In principle, any particle dynamics model could be used, but for the sake of verification a stochastic model has been implemented. 
 This is no limitation, as the interface to the lower scale model is simple, and the lower scale model works as a standalone unit. \\
 
 \noindent A large emphasis has been put on verification of all parts of the hybrid model. 
-Both individually and for the combined, hybrid solver to verify the average behavior of the system.\\
+Each individual solver has tested both as a standalone unit, and as a part of the combined, hybrid solver in order to verify that the code functions properly.
 
 \section{Outline}
 \noindent The thesis in your hands has the following structure: \\
