--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -68,14 +68,14 @@
 % \end{dedication}
 
 \begin{acknowledgements}
-  This masters thesis marks the end of a five year education, which I could not have completed without the help of my parents.\\
+  This masters thesis marks the end of a five year education, which I could not have completed without the support of my parents.\\
   
-  \noindent I would like to thank my counselor, Hans Petter Langtangen, for forcing me to rewrite the entire thesis. It was hard, but worth it. 
+  \noindent I would like to thank my counselor, Hans Petter Langtangen, for convincing me to rewrite the entire thesis. It was hard, but worth it. 
   Thanks to Geir Halnes, and Gaute Einevoll for help with the applications part of the thesis, and interesting discussions. \\
   
-  Thanks to Torbjørn Seland, for reading this thing.\\
+   \noindent Thanks to Torbjørn Seland, for giving me valuable input on formulations.\\
   
-  And finally, a special thanks to my fantastic girlfriend, Nina, who has put up with my complaining throughout this project!
+   \noindent And finally, a special thanks to my fantastic girlfriend, Nina, who has put up with my complaining throughout this project!
   
 \end{acknowledgements}
 
